--- a/build.gradle
+++ b/build.gradle
@@ -30,13 +30,18 @@ loom {
 }
 
 dependencies {
-	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings loom.officialMojangMappings()
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	// Fabric API. This is technically optional, but you probably want it anyway.
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	// modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+	modImplementation(fabricApi.module("fabric-api-base", project.fabric_version))
+	include(fabricApi.module("fabric-api-base", project.fabric_version))
+
+	modImplementation(fabricApi.module("fabric-resource-loader-v0", project.fabric_version))
+	include(fabricApi.module("fabric-resource-loader-v0", project.fabric_version))
+
 	modImplementation "blue.endless:jankson:1.2.3"
 }
 
