--- a/build.gradle
+++ b/build.gradle
@@ -36,11 +36,9 @@ dependencies {
 
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	/*modImplementation(fabricApi.module("fabric-api-base", project.fabric_version))
-	include(fabricApi.module("fabric-api-base", project.fabric_version))
-
-	modImplementation(fabricApi.module("fabric-resource-loader-v0", project.fabric_version))
-	include(fabricApi.module("fabric-resource-loader-v0", project.fabric_version))*/
+	modImplementation(fabricApi.module("fabric-api-base", project.fabric_version))
+	// modImplementation(fabricApi.module("fabric-resource-loader-v0", project.fabric_version))
+	include(fabricApi.module("fabric-resource-loader-v0", project.fabric_version))
 
 	modImplementation "blue.endless:jankson:1.2.3"
 	include "blue.endless:jankson:1.2.3"
