--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,35 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
-org.gradle.parallel=true
+# Important Notes:
+# Every field you add must be added to the root build.gradle expandProps map.
 
-# Fabric Properties
-# check these on https://fabricmc.net/develop
+# Project
+version=0.1.0
+group=fewizz.canpipe
+java_version=21
+
+# Common
 minecraft_version=1.21.4
-loader_version=0.16.9
+mod_name=CanPipe
+mod_author=fewizz
+mod_id=canpipe
+license=LGPL-3.0
+credits=
+description=Mod for loading Canvas pipelines
+minecraft_version_range=[1.21.4, 1.22)
+## This is the version of minecraft that the 'common' project uses, you can find a list of all versions here
+## https://projects.neoforged.net/neoforged/neoform
+neo_form_version=1.21.4-20241203.161809
+# The version of ParchmentMC that is used, see https://parchmentmc.org/docs/getting-started#choose-a-version for new versions
+parchment_minecraft=1.21.4
+parchment_version=2025.01.05
 
-# Mod Properties
-mod_version=1.0.0
-maven_group=com.example
-archives_base_name=modid
-
-# Dependencies
+# Fabric
 fabric_version=0.114.0+1.21.4
+fabric_loader_version=0.16.9
+
+# NeoForge
+neoforge_version=21.4.50-beta
+neoforge_loader_version_range=[4,)
+
+# Gradle
+org.gradle.jvmargs=-Xmx3G
+org.gradle.daemon=false
