--- a/settings.gradle
+++ b/settings.gradle
@@ -13,11 +13,8 @@ pluginManagement {
     }
 }
 
-plugins {
-    id 'org.gradle.toolchains.foojay-resolver-convention' version '0.8.0'
-}
-
 rootProject.name = 'can-pipe'
 
-include('fabric')
-include('neoforge')
+include "common"
+include "fabric"
+include "neoforge"
