inject button for switching pipelines (doesn't work yet)

--- a/.gitignore
+++ b/.gitignore
@@ -41,4 +41,5 @@ replay_*.log
 
 common/src/main/java/com/*
 common/src/main/java/net/*
+fabric/src/main/java/net/*
 common/src/main/resources/assets/minecraft/*
