--- a/gradle.properties
+++ b/gradle.properties
@@ -27,3 +27,5 @@ neoforge_loader_version_range=[4,)
 # Gradle
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+fabric.loom.multiProjectOptimisation=true
