--- a/common/build.gradle
+++ b/common/build.gradle
@@ -7,6 +7,13 @@ loom {
     runs {}
 }
 
+repositories {
+    maven {
+        name = 'ParchmentMC'
+        url = 'https://maven.parchmentmc.org'
+    }
+}
+
 dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings loom.layered {
