fix Lumi items rendering; slightly change normals/tangets generation

--- a/neoforge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/neoforge/src/main/resources/META-INF/accesstransformer.cfg
@@ -13,6 +13,7 @@ public-f  net.minecraft.client.Minecraft  mainRenderTarget
 
 public  net.minecraft.client.renderer.RenderStateShard$OutputStateShard
 public  net.minecraft.client.renderer.RenderStateShard$TextureStateShard
+public  net.minecraft.client.renderer.RenderStateShard$TextureStateShard  texture
 public  net.minecraft.client.renderer.RenderStateShard$ShaderStateShard
 public  net.minecraft.client.renderer.RenderStateShard$ShaderStateShard  shader
 public  net.minecraft.client.renderer.RenderStateShard  name
