--- a/neoforge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/neoforge/src/main/resources/META-INF/accesstransformer.cfg
@@ -11,6 +11,7 @@ public  com.mojang.blaze3d.vertex.ByteBufferBuilder  pointer
 
 public-f  net.minecraft.client.Minecraft  mainRenderTarget
 
+public  net.minecraft.client.renderer.RenderStateShard$EmptyTextureStateShard
 public  net.minecraft.client.renderer.RenderStateShard$OutputStateShard
 public  net.minecraft.client.renderer.RenderStateShard$TextureStateShard
 public  net.minecraft.client.renderer.RenderStateShard$TextureStateShard  texture
