--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ group=fewizz.canpipe
 java_version=21
 
 minecraft_version=1.21.4
-mod_name=CanPipe
+mod_name=Can-Pipe
 mod_author=fewizz
 mod_id=canpipe
 license=LGPL-3.0
