--- a/neoforge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/neoforge/src/main/resources/META-INF/accesstransformer.cfg
@@ -32,7 +32,9 @@ public  net.minecraft.client.renderer.RenderStateShard  RENDERTYPE_ENTITY_CUTOUT
 public  net.minecraft.client.renderer.RenderStateShard  RENDERTYPE_ENTITY_CUTOUT_NO_CULL_Z_OFFSET_SHADER
 public  net.minecraft.client.renderer.RenderStateShard  RENDERTYPE_ENTITY_TRANSLUCENT_SHADER
 public  net.minecraft.client.renderer.RenderStateShard  RENDERTYPE_ENTITY_TRANSLUCENT_EMISSIVE_SHADER
+public  net.minecraft.client.renderer.RenderStateShard  RENDERTYPE_ENTITY_NO_OUTLINE_SHADER
 public  net.minecraft.client.renderer.RenderStateShard  RENDERTYPE_ITEM_ENTITY_TRANSLUCENT_CULL_SHADER
+public  net.minecraft.client.renderer.RenderStateShard  RENDERTYPE_EYES_SHADER
 public  net.minecraft.client.renderer.RenderStateShard  PARTICLE_SHADER
 
 public  net.minecraft.client.renderer.RenderStateShard  TRANSLUCENT_TARGET
