--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ fabric_version=0.114.0+1.21.4
 fabric_loader_version=0.16.9
 
 # NeoForge
-neoforge_version=21.4.50-beta
+neoforge_version=21.4.123
 neoforge_loader_version_range=[4,)
 
 # Gradle
