--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -1,10 +1,5 @@
 plugins {
-    id 'net.neoforged.moddev' version '2.0.49-beta'
-}
-
-dependencies {
-    jarJar(implementation("blue.endless:jankson:1.2.3"))
-    additionalRuntimeClasspath "blue.endless:jankson:1.2.3"
+    id 'net.neoforged.moddev' version '2.0.78'
 }
 
 neoForge {
@@ -29,6 +24,11 @@ neoForge {
             sourceSet(sourceSets.main)
         }
     }
+}
+
+dependencies {
+    jarJar implementation("blue.endless:jankson:1.2.3")
+    additionalRuntimeClasspath "blue.endless:jankson:1.2.3"
 }
 
 base {
